# factorygame

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: cmake-multi-platform.yml
include/: AssetManager.h  Chunk.h  Command.h  CommandQueue.h  Common.h  Component.h  ComponentArray.h  Components.h  Engine.h  Entity.h  Event.h  EventDispatcher.h  FastNoiseLite.h  GEngine.h  GameState.h  InputState.h  InputSystem.h  InteractableComponent.h  InteractionSystem.h  Inventory.h  InventoryComponent.h  InventorySystem.h  Item.h  MineableComponent.h  ObjectPool.h  Player.h  PositionComponent.h  RefineryComponent.h  RefinerySystem.h  Registry.h  ResourceNodeComponent.h  ResourceNodeSystem.h  TileData.h  TimerComponent.h  TimerManager.h  TimerSystem.h  Type.h  World.h
include/Commands/: AssemblingMachineInteractCommand.h  Command.h  InventoryCommand.h  PerformInteractionCommand.h  PlayerDisconnectedCommnad.h  PlayerSpawnCommand.h  ResourceMineCommand.h
include/Components/: AnimationComponent.h  AssemblingMachineComponent.h  BuildingComponent.h  BuildingPreviewComponent.h  CameraComponent.h  ChunkComponent.h  DebugRectComponent.h  InactiveComponent.h  InputStateComponent.h  InteractableComponent.h  InteractionComponent.h  InterpBufferComponent.h  InventoryComponent.h  LocalPlayerComponent.h  MiningDrillComponent.h  MovableComponent.h  MoveIntentComponent.h  MovementComponent.h  NetPredictionComponent.h  PlayerStateComponent.h  RefineryComponent.h  ResourceNodeComponent.h  SpriteComponent.h  TextComponent.h  TileMapComponent.h  TimerComponent.h  TransformComponent.h
include/Core/: AssetManager.h  Chunk.h  Command.h  CommandQueue.h  ComponentArray.h  Entity.h  EntityFactory.h  Event.h  EventDispatcher.h  GEngine.h  GameState.h  IGameState.h  InputManager.h  InputPoller.h  InputState.h  Item.h  ObjectPool.h  Packet.h  Recipe.h  Registry.h  Server.h  ServerImpl.h  Socket.h  SocketImpl.h  SystemContext.h  TextureDeleter.h  ThreadSafeQueue.h  TileData.h  TimerManager.h  Type.h  World.h  WorldAssetManager.h
include/GameState/: ClientState.h  IGameState.h  MainMenuState.h  PauseState.h  PlayState.h  ServerState.h
include/Lib/: FastNoiseLite.h  imgui_internal.h
include/System/: AnimationSystem.h  AssemblingMachineSystem.h  BasicNetworkSystem.h  CameraSystem.h  ClientNetworkSystem.h  InputSystem.h  InteractionSystem.h  InventorySystem.h  ItemDragSystem.h  MiningDrillSystem.h  MovementSystem.h  NetworkSystem.h  RefinerySystem.h  RenderSystem.h  ResourceNodeSystem.h  ServerNetworkSystem.h  TimerExpireSystem.h  TimerSystem.h  UISystem.h
include/Util/: AnimUtil.h  CameraUtil.h  EntityFactory.h  MathUtil.h  PacketUtil.h  RecurringTimerUtil.h  TimerUtil.h
include/lib/: imconfig.h  imgui.h  imgui_stdlib.h
src/: AssetManager.cpp  Chunk.cpp  Engine.cpp  Entity.cpp  Event.cpp  EventDispatcher.cpp  GEngine.cpp  GameState.cpp  InputSystem.cpp  InteractionSystem.cpp  Inventory.cpp  InventorySystem.cpp  Player.cpp  RefineryComponent.cpp  RefinerySystem.cpp  ResourceNodeComponent.cpp  ResourceNodeSystem.cpp  TimerManager.cpp  TimerSystem.cpp  World.cpp  main.cpp
src/Components/: TimerComponent.cpp
src/Core/: AssetManager.cpp  Chunk.cpp  EntityFactory.cpp  EventDispatcher.cpp  GEngine.cpp  GameState.cpp  InputManager.cpp  InputPoller.cpp  Server.cpp  Socket.cpp  TimerManager.cpp  World.cpp  WorldAssetManager.cpp
src/Core/Network/: Server_linux.cpp  Server_windows.cpp  Socket_linux.cpp  Socket_windows.cpp
src/Core/Server/: Server_windows.cpp
src/GameState/: ClientState.cpp  MainMenuState.cpp  PauseState.cpp  PlayState.cpp  ServerState.cpp
src/System/: AnimationSystem.cpp  AssemblingMachineSystem.cpp  CameraSystem.cpp  ClientNetworkSystem.cpp  InputSystem.cpp  InteractionSystem.cpp  InventorySystem.cpp  ItemDragSystem.cpp  MiningDrillSystem.cpp  MovementSystem.cpp  NetworkSystem.cpp  RefinerySystem.cpp  RenderSystem.cpp  ResourceNodeSystem.cpp  ServerNetworkSystem.cpp  TimerExpireSystem.cpp  TimerSystem.cpp  UISystem.cpp
src/Util/: AnimUtil.cpp  CameraUtil.cpp  EntityFactory.cpp  MathUtil.cpp  RecurringTimerUtil.cpp  TimerUtil.cpp
src/lib/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_freetype.cpp  imgui_impl_sdl2.cpp  imgui_impl_sdlrenderer2.cpp  imgui_stdlib.cpp  imgui_tables.cpp  imgui_widgets.cpp
tests/: CMakeLists.txt  test_ecs.cpp  test_math.cpp  test_world.cpp
